--- a/trunk/ClassMS/WebRoot/login.html
+++ b/trunk/ClassMS/WebRoot/login.html
@@ -8,7 +8,7 @@
 <body>
 <div id="container">
   <div id="m_login">
-    <form action="login.action" method="post">
+    <form action="login" method="post">
       <p>
         <label>帐号：
           <input type="text" name="username" value="0707501145" />
